Actualización de formatos para generar word

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2245,11 +2245,11 @@
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\Shared\_incisosSubsanables.cshtml" />
     <Content Include="Areas\THabilitante\Views\ManTHabilitante\_shared\_renderTHExtincion.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\Shared\_InformeIFI.cshtml" />
-    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplIFIInforme.cshtml" />
-    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplIFIConcesiones.cshtml" />
-    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplIFIPredios.cshtml" />
-    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplIFICCNN.cshtml" />
-    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplIFIFauna.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplInforme.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplConcesiones.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplPredios.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplCCNN.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplFauna.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\infracciones\inciso_1.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\infracciones\inciso_e.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\infracciones\inciso_11.cshtml" />
@@ -2264,6 +2264,7 @@
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\infracciones\inciso_32.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\infracciones\inciso_b.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\ManCalculoMulta\Shared\_modalCalculoMulta.cshtml" />
+    <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\_tmplFootnotes.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
