--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2240,6 +2240,7 @@
     <Content Include="Areas\THabilitante\Views\ManTHabilitante\_shared\_renderTHExtincion.cshtml" />
     <Content Include="Areas\General\Views\ManPersonas\_AddTipoCargo.cshtml" />
     <Content Include="Areas\General\Views\Controles\_ActualizaCargoPersona.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInformeExSitu\_shared\_Mandatos.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
