--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -30,7 +30,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TypeScriptToolsVersion>1.8</TypeScriptToolsVersion>
-    <Use64BitIISExpress>false</Use64BitIISExpress>
+    <Use64BitIISExpress>true</Use64BitIISExpress>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -963,14 +963,6 @@
     <Content Include="lib\wnvwordtopdf.dll" />
     <Content Include="PlantillaPDF\huella_osinfor_normal.png" />
     <Content Include="Ruta_SITD_Anexos\-Supuesto.png" />
-    <Content Include="Ruta_SITD_Anexos\002-2016-OSINFOR-TFFS-Cargo.jpg" />
-    <Content Include="Ruta_SITD_Anexos\002-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\021-2016-OSINFOR-TFFS-Cargo.jpg" />
-    <Content Include="Ruta_SITD_Anexos\021-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\026-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\028-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\030-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\032-2016-OSINFOR-TFFS-Cargo.txt" />
     <Content Include="Scripts\additional-methods.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
