--- a/Capas/GeneralSQL/packages.config
+++ b/Capas/GeneralSQL/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Npgsql" version="2.2.3" targetFramework="net46" />
   <package id="Oracle.ManagedDataAccess" version="19.8.0" targetFramework="net46" />
 </packages>
