Ignorar .csproj THSancionYCaducidad

--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,4 @@ ModelManifest.xml
 /SIGOFCv3/Archivos/TransferidosSITD
 /SIGOFCv3/Archivos/InformeDigital
 /ZooObservatorio/Archivos
+/THSancionYCaducidad/THSancionYCaducidad.csproj
