--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -963,14 +963,6 @@
     <Content Include="lib\wnvwordtopdf.dll" />
     <Content Include="PlantillaPDF\huella_osinfor_normal.png" />
     <Content Include="Ruta_SITD_Anexos\-Supuesto.png" />
-    <Content Include="Ruta_SITD_Anexos\002-2016-OSINFOR-TFFS-Cargo.jpg" />
-    <Content Include="Ruta_SITD_Anexos\002-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\021-2016-OSINFOR-TFFS-Cargo.jpg" />
-    <Content Include="Ruta_SITD_Anexos\021-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\026-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\028-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\030-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\032-2016-OSINFOR-TFFS-Cargo.txt" />
     <Content Include="Scripts\additional-methods.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
@@ -2194,7 +2186,6 @@
     <Content Include="Areas\General\Views\ManMeta\AddEdit.cshtml" />
     <Content Include="Archivos\Constancias\PlantillaConstanciasTH.docx" />
     <Content Include="Areas\Supervision\Views\ManInforme\_InformeDigital.cshtml" />
-    <Content Include="Archivos\DocFirmados\documento.pdf" />
     <Content Include="Areas\Seguridad\Views\Perfil\_MenuRol.cshtml" />
     <Content Include="Areas\Seguridad\Views\Usuario\_MenuRol.cshtml" />
     <Content Include="Archivos\Plantilla\PlantillaRptHallazgo.xlsx" />
@@ -2460,7 +2451,6 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -2500,6 +2490,7 @@
     <Folder Include="Archivos\Constancias\Firmados\" />
     <Folder Include="Archivos\DatosImportacion\" />
     <Folder Include="Archivos\Denuncia\" />
+    <Folder Include="Archivos\DocFirmados\" />
     <Folder Include="Archivos\Incidencia\" />
     <Folder Include="Archivos\InfEvalMandatos\" />
     <Folder Include="Archivos\Modulo\Libro_Operaciones\Temp\" />
