--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -30,8 +30,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TypeScriptToolsVersion>1.8</TypeScriptToolsVersion>
-    <Use64BitIISExpress>
-    </Use64BitIISExpress>
+    <Use64BitIISExpress>false</Use64BitIISExpress>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -968,15 +967,6 @@
     <Content Include="Imagenes\Mensaje\info.png" />
     <Content Include="lib\wnvwordtopdf.dll" />
     <Content Include="PlantillaPDF\huella_osinfor_normal.png" />
-    <Content Include="Ruta_SITD_Anexos\-Supuesto.png" />
-    <Content Include="Ruta_SITD_Anexos\002-2016-OSINFOR-TFFS-Cargo.jpg" />
-    <Content Include="Ruta_SITD_Anexos\002-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\021-2016-OSINFOR-TFFS-Cargo.jpg" />
-    <Content Include="Ruta_SITD_Anexos\021-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\026-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\028-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\030-2016-OSINFOR-TFFS-Cargo.txt" />
-    <Content Include="Ruta_SITD_Anexos\032-2016-OSINFOR-TFFS-Cargo.txt" />
     <Content Include="Scripts\additional-methods.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
@@ -2484,7 +2474,6 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -2549,6 +2538,7 @@
     <Folder Include="bin\roslyn\" />
     <Folder Include="Fotos\" />
     <Folder Include="PlantillaPDF\Descargas\" />
+    <Folder Include="Ruta_SITD_Anexos\" />
     <Folder Include="Scripts\jquery.cookie\demo\" />
     <Folder Include="SqlServerTypes\x64\" />
     <Folder Include="SqlServerTypes\x86\" />
