Enlace de expedientes TAB Datos generales con IFI Digital

--- a/Capas/CapaEntidad/CapaEntidad.csproj
+++ b/Capas/CapaEntidad/CapaEntidad.csproj
@@ -278,6 +278,7 @@
     <Compile Include="ViewModel\VM_THabilitantePOI.cs" />
     <Compile Include="ViewModel\VM_THComportamiento.cs" />
     <Compile Include="ViewModel\VM_TRAMITE.cs" />
+    <Compile Include="ViewModel\VM_TRA_M_TRAMITE_SITD.cs" />
     <Compile Include="ViewModel\VM_TribunalNotificacion2da.cs" />
     <Compile Include="ViewModel\VM_Veeduria.cs" />
   </ItemGroup>
