--- a/SIGOFCv3/Web.config
+++ b/SIGOFCv3/Web.config
@@ -73,7 +73,7 @@
 		<add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
 		<!--<add name="ConexionSITDSql" connectionString="server=10.10.11.20;database=std_osinfor_TEST;uid=consultorusfs14;password=Niarfe22971278/;Connection Timeout=0;Application Name=ServPlataformaInterna" providerName="System.Data.SqlClient" />-->
 		<add name="ConexionSITDSql" connectionString="server=10.10.11.23;database=std_osinfor_DEV;uid=consultordp15;password=*2022*tgs;Connection Timeout=0;Application Name=ServPlataformaInterna" providerName="System.Data.SqlClient" />
-		<add name="ConOracle" connectionString="DATA SOURCE=10.10.11.43:1521/sigod.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=contratistaoti016;PASSWORD=Torre$20230116_1734" providerName="Oracle.DataAccess.Client" />
+		<add name="ConOracle" connectionString="DATA SOURCE=10.10.11.43:1521/sigod.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=contratistaoti016;PASSWORD=Jorge$20230320$Peru" providerName="Oracle.DataAccess.Client" />
 		<add name="ConexionSITDSqlALegal" connectionString="server=10.10.11.23;database=BD_AsesoriaLegal_DEV;uid=consultorusfs24;password=*2021*jflp;Connection Timeout=0;Application Name=ServPlataformaInterna" providerName="System.Data.SqlClient" />
 		<add name="ConexionSITDSqlTesoreria" connectionString="server=10.10.11.23;database=BD_TESORERIA_DEV;uid=consultorusfs24;password=*2021*jflp;Connection Timeout=0;Application Name=ServPlataformaInterna" providerName="System.Data.SqlClient" />
 		<add name="ConexionObservatorio" connectionString="Data Source=10.10.11.43:1521/obsd.osinfor.gob.pe;User Id=contratistaoti010;Password=Henry$20220601_1245;" providerName="Oracle.DataAccess.Client" />
