Avance REQ-321-RF001

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -30,7 +30,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TypeScriptToolsVersion>1.8</TypeScriptToolsVersion>
-    <Use64BitIISExpress>true</Use64BitIISExpress>
+    <Use64BitIISExpress>false</Use64BitIISExpress>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -597,6 +597,9 @@
     <Content Include="Areas\Supervision\js\ManInformeExSitu\_AreaExSitu.js" />
     <Content Include="Areas\Supervision\js\ManInforme\Index_suspension.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_ArbolesSinPoa.js" />
+    <Content Include="Areas\Supervision\js\ManInforme\_ZonifDistribEspecie.js" />
+    <Content Include="Areas\Supervision\js\ManInforme\_Infraestructura.js" />
+    <Content Include="Areas\Supervision\js\ManInforme\_CoberturaBoscosa.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_ModalCartaOficios.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_PersonalTecProf.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_Desplazamiento.js" />
@@ -625,6 +628,7 @@
     <Content Include="Areas\Supervision\js\ManInforme\_ModalInforme.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_POASupervisado.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_VerticeArea.js" />
+    <Content Include="Areas\Supervision\js\ManInforme\_OtrosPuntosEval.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_VerticeTHCampo.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_VerticeVerificado.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_VolumenAnalizado.js" />
@@ -2232,6 +2236,14 @@
     <Content Include="Areas\General\Views\ManPersonas\_AddTipoCargo.cshtml" />
     <Content Include="Areas\General\Views\Controles\_ActualizaCargoPersona.cshtml" />
     <Content Include="Areas\Supervision\Views\ManInformeExSitu\_shared\_Mandatos.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderCoberturaBoscosa.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderInfraestructura.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\_CoberturaBoscosa.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\_OtrosPuntosEval.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\_Infraestructura.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderOtrosPuntosEval.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderZonifDistribEspecie.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\_ZonifDistribEspecie.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
