--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -597,6 +597,7 @@
     <Content Include="Areas\Supervision\js\ManInformeExSitu\_AreaExSitu.js" />
     <Content Include="Areas\Supervision\js\ManInforme\Index_suspension.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_ArbolesSinPoa.js" />
+    <Content Include="Areas\Supervision\js\ManInforme\_AproSostenible.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_ZonifDistribEspecie.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_Infraestructura.js" />
     <Content Include="Areas\Supervision\js\ManInforme\_CoberturaBoscosa.js" />
@@ -2244,6 +2245,8 @@
     <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderOtrosPuntosEval.cshtml" />
     <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderZonifDistribEspecie.cshtml" />
     <Content Include="Areas\Supervision\Views\ManInforme\_ZonifDistribEspecie.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderAprovSostenible.cshtml" />
+    <Content Include="Areas\Supervision\Views\ManInforme\_AprovSostenible.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
