--- a/SIGOFCv3/Web.config
+++ b/SIGOFCv3/Web.config
@@ -72,9 +72,9 @@
   <connectionStrings>
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
     <add name="ConexionSITDSql" connectionString="server=10.10.11.20;database=std_osinfor_TEST;uid=consultorusfs14;password=Niarfe22971278/;Connection Timeout=0;Application Name=ServPlataformaInterna" providerName="System.Data.SqlClient" />
-    <!--<add name="ConOracle" connectionString="DATA SOURCE=10.10.11.44:1521/sigot.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=EPIMENTEL;PASSWORD=OSINFOR2020" providerName="Oracle.DataAccess.Client" />-->
-    <!--<add name="ConOracle" connectionString="DATA SOURCE=10.10.11.43:1521/sigod.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=contratistaoti010;PASSWORD=Henry$20230202$BRA" providerName="Oracle.DataAccess.Client" />-->
-    <add name="ConOracle" connectionString="DATA SOURCE=10.10.11.42:1526/sigop.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=contratistaoti010;PASSWORD=Henry$2023$BRASIL" providerName="Oracle.DataAccess.Client" />
+    <!--<add name="ConOracle" connectionString="DATA SOURCE=10.10.11.44:1521/sigot.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=user;PASSWORD=pass" providerName="Oracle.DataAccess.Client" />-->
+    <add name="ConOracle" connectionString="DATA SOURCE=10.10.11.43:1521/sigod.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=user;PASSWORD=pass" providerName="Oracle.DataAccess.Client" />
+    <!--<add name="ConOracle" connectionString="DATA SOURCE=10.10.11.42:1526/sigop.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=user;PASSWORD=pass" providerName="Oracle.DataAccess.Client" />-->
 
 
     <add name="ConexionSITDSqlALegal" connectionString="server=10.10.11.23;database=BD_AsesoriaLegal_DEV;uid=consultorusfs24;password=*2021*jflp;Connection Timeout=0;Application Name=ServPlataformaInterna" providerName="System.Data.SqlClient" />
