Se agrega el logo Peru con punche al footer

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -743,6 +743,7 @@
     <Content Include="Content\images\logo\escudo-peruano.jpg" />
     <Content Include="Content\images\logo\Icono-Estudio.png" />
     <Content Include="Content\images\logo\Logo-sigo-2.png" />
+    <Content Include="Content\images\logo\osinfor-footer-punche.png" />
     <Content Include="Content\images\logo\osinfor-footer.png" />
     <Content Include="Content\images\logo\osinfor-header-1.png" />
     <Content Include="Content\images\logo\osinfor-header-2.png" />
