Integrar ramas (varios)

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -452,6 +452,7 @@
     <Content Include="Areas\General\css\ManCalculoMulta\ManCalculoMulta.css" />
     <Content Include="Areas\General\css\ReporteSeguimientoRegistro\Index.css" />
     <Content Include="Areas\General\css\Reportes\Reporte.css" />
+    <Content Include="Areas\General\js\Controles\_ActualizaCargoPersona.js" />
     <Content Include="Areas\General\js\Controles\_BuscarPersonaGeneral.js" />
     <Content Include="Areas\General\js\Controles\_cambiarPass.js" />
     <Content Include="Areas\General\js\Controles\_CNotificacion.js" />
@@ -2277,9 +2278,9 @@
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Predios privados\infracciones\inciso_c.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\infracciones\inciso_b.cshtml" />
     <Content Include="Areas\Fiscalizacion\Views\InformeLegal\templates\Fauna\infracciones\inciso_17.cshtml" />
-    <Content Include="Areas\General\Views\ManPersonas\_AddTipoCargo.cshtml" />
-    <Content Include="Areas\General\Views\Controles\_ActualizaCargoPersona.cshtml" />
     <Content Include="Areas\Supervision\Views\ManInformeExSitu\_shared\_Mandatos.cshtml" />
+    <Content Include="Areas\General\Views\Controles\_ActualizaCargoPersona.cshtml" />
+    <Content Include="Areas\General\Views\ManPersonas\_AddTipoCargo.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
