--- a/THSancionYCaducidad/THSancionYCaducidad.csproj
+++ b/THSancionYCaducidad/THSancionYCaducidad.csproj
@@ -34,7 +34,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IntermediateOutputPath>C:\Users\icarl\AppData\Local\Temp\vsCBEB.tmp\Debug\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\chuaroc\AppData\Local\Temp\vs57B1.tmp\Debug\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,7 +44,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IntermediateOutputPath>C:\Users\icarl\AppData\Local\Temp\vsCBEB.tmp\Release\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\chuaroc\AppData\Local\Temp\vs57B1.tmp\Release\</IntermediateOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotNetOpenAuth.AspNet, Version=4.1.0.0, Culture=neutral, PublicKeyToken=2780ccd10d57b246, processorArchitecture=MSIL">
