--- a/SIGOFCv3/Web.config
+++ b/SIGOFCv3/Web.config
@@ -15,6 +15,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="aspnet:MaxJsonDeserializerMembers" value="2147483647" />
+	<add key="pathSIGOsfc" value="Archivos" />
     <add key="pathCkeditor" value="Archivos/ckEditor" />
     <add key="pathInvoker" value="Archivos/DocFirmados" />
     <add key="pathTransferidoSITD" value="Archivos/TransferidosSITD" />
