--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -692,6 +692,7 @@
     <Content Include="Areas\THabilitante\js\ManPoa\AddEdit.js" />
     <Content Include="Areas\THabilitante\js\ManPoa\_DetRegente.js" />
     <Content Include="Areas\THabilitante\js\ManPoa\_ErrorMaterial.js" />
+    <Content Include="Areas\THabilitante\js\ManPoa\_FechaRegencia.js" />
     <Content Include="Areas\THabilitante\js\ManPreviosAlerta\AddEdit.js" />
     <Content Include="Areas\THabilitante\js\ManPreviosAlerta\_ItemDestinatario.js" />
     <Content Include="Areas\THabilitante\js\ManPreviosAlerta\_ItemDestinatarioCC.js" />
@@ -2302,6 +2303,7 @@
     <Content Include="Areas\Supervision\Views\ManInforme\_AprovSostenible.cshtml" />
     <Content Include="Areas\THabilitante\Views\ManPOA\_DetRegente.cshtml" />
     <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderEnfermedades.cshtml" />
+    <Content Include="Areas\THabilitante\Views\ManPOA\_FechaRegencia.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
