Requerimiento  01 Universo capacitable

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -227,6 +227,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Capacitacion\CapacitacionAreaRegistration.cs" />
     <Compile Include="Areas\Capacitacion\Controllers\ManCapacitacionController.cs" />
+    <Compile Include="Areas\Capacitacion\Controllers\ManPDCController.cs" />
     <Compile Include="Areas\Capacitacion\Controllers\ManProgramaCapacitacionController.cs" />
     <Compile Include="Areas\Capacitacion\Models\ManCapacitacion\ExportarDatos.cs" />
     <Compile Include="Areas\Capacitacion\Models\ManCapacitacion\ImportarDatos.cs" />
@@ -2304,6 +2305,13 @@
     <Content Include="Areas\THabilitante\Views\ManPOA\_DetRegente.cshtml" />
     <Content Include="Areas\Supervision\Views\ManInforme\Render\_renderEnfermedades.cshtml" />
     <Content Include="Areas\THabilitante\Views\ManPOA\_FechaRegencia.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\ManPDC\_redenTUPDC.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\ManPDC\_rederTUPDCDet.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\ManPDC\_renderResumen.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\ManPDC\IndexConsolidado.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\ManPDC\IndexPDC.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
@@ -2574,7 +2582,6 @@
     <Folder Include="Archivos\Plantilla\Paspeq\temp\" />
     <Folder Include="Archivos\Temporales\" />
     <Folder Include="Archivos\TransferidosSITD\" />
-    <Folder Include="Areas\Capacitacion\Views\Shared\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManILegal\" />
     <Folder Include="Areas\Fiscalizacion\Views\ManResolucion\shared\" />
     <Folder Include="Areas\Focalizacion\Models\" />
