se actualizan las referencias para el requerimiento del universo capacitable, no se estaba visualizando las referencias a las entidades

--- a/Capas/CapaEntidad/CapaEntidad.csproj
+++ b/Capas/CapaEntidad/CapaEntidad.csproj
@@ -111,6 +111,8 @@
     <Compile Include="Documento\Ent_Plan_T_Detalle_Especie.cs" />
     <Compile Include="Documento\Ent_Priorizacion.cs" />
     <Compile Include="Documento\Ent_Priorizacion_Detalle.cs" />
+    <Compile Include="Documento\Ent_ReportConsolidadoPDC.cs" />
+    <Compile Include="Documento\Ent_ReportePDC.cs" />
     <Compile Include="Documento\Ent_ResSubDirTabInforme.cs" />
     <Compile Include="Documento\Ent_Ruta.cs" />
     <Compile Include="Documento\Ent_PREVIOS_ALERTA.cs" />
