se realiza un cambio en la opcion  de descarga, se estaba teniendo inconvenientes con los textos largos, se procede a cambiar el metodo de descarga

--- a/.gitignore
+++ b/.gitignore
@@ -331,3 +331,6 @@ ModelManifest.xml
 /SIGOFCv3/Archivos/InformeDigital
 /ZooObservatorio/Archivos
 /THSancionYCaducidad/THSancionYCaducidad.csproj
+/SIGOFCv3/Archivos/Plantilla/20236229470286.xlsx
+/SIGOFCv3/Archivos/Plantilla/202362213423811.xlsx
+/SIGOFCv3/Archivos/Plantilla/2023622123546757.xlsx
