--- a/Capas/CapaLogica/packages.config
+++ b/Capas/CapaLogica/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EPPlus" version="5.3.0" targetFramework="net46" />  
+  <package id="DocumentFormat.OpenXml" version="2.18.0" targetFramework="net46" />
+  <package id="EPPlus" version="5.3.0" targetFramework="net46" />
   <package id="iTextSharp" version="5.5.13.1" targetFramework="net46" />
   <package id="Oracle.ManagedDataAccess" version="19.8.0" targetFramework="net46" />
 </packages>
