REQ-354, Se optimiza la consulta y la descarga de archivos relacionados al universo capacitable, se agrega la importacion de datos desde la plantilla excel se agregan los criterios para el consolidado se agregan las plantillas

--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,9 @@ ModelManifest.xml
 /SIGOFCv3/Archivos/Plantilla/20236229470286.xlsx
 /SIGOFCv3/Archivos/Plantilla/202362213423811.xlsx
 /SIGOFCv3/Archivos/Plantilla/2023622123546757.xlsx
+/SIGOFCv3/Archivos/Plantilla/20230625084151861.xlsx
+/SIGOFCv3/Archivos/Plantilla/20230625084137199.xlsx
+/SIGOFCv3/Archivos/Plantilla/20230625001238571.xlsx
+/SIGOFCv3/Archivos/Plantilla/20230624234803953.xlsx
+/SIGOFCv3/Archivos/Plantilla/20230624234553606.xlsx
+/SIGOFCv3/Archivos/Plantilla/20230624234238760.xlsx
