--- a/Capas/CapaEntidad/CapaEntidad.csproj
+++ b/Capas/CapaEntidad/CapaEntidad.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Documento\Ent_Paspeq.cs" />
     <Compile Include="Documento\Ent_Paspeq_Detalle.cs" />
     <Compile Include="Documento\Ent_Paspeq_Detalle_V3.cs" />
+    <Compile Include="Documento\Ent_PDCImportPASPEQ.cs" />
     <Compile Include="Documento\Ent_PLANIFICACION.cs" />
     <Compile Include="Documento\Ent_PlanManejo_Especies.cs" />
     <Compile Include="Documento\Ent_Plan_Manejo_Supervisado.cs" />
