--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2312,6 +2312,8 @@
     <Content Include="Areas\Capacitacion\Views\ManPDC\_renderResumen.cshtml" />
     <Content Include="Areas\Capacitacion\Views\ManPDC\IndexConsolidado.cshtml" />
     <Content Include="Areas\Capacitacion\Views\ManPDC\IndexPDC.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\ManPDC\IndexImport.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\ManPDC\_renderTImport.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
