correccion en la importacion de archivos

--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,4 @@ ModelManifest.xml
 /SIGOFCv3/Archivos/Plantilla/20230624234803953.xlsx
 /SIGOFCv3/Archivos/Plantilla/20230624234553606.xlsx
 /SIGOFCv3/Archivos/Plantilla/20230624234238760.xlsx
+/SIGOFCv3/Archivos/Plantilla/20236269569357.xlsx
