codigo de desarrollo para la generacion de constancias

--- a/.gitignore
+++ b/.gitignore
@@ -341,3 +341,10 @@ ModelManifest.xml
 /SIGOFCv3/Archivos/Plantilla/20230624234553606.xlsx
 /SIGOFCv3/Archivos/Plantilla/20230624234238760.xlsx
 /SIGOFCv3/Archivos/Plantilla/20236269569357.xlsx
+/SIGOFCv3/Archivos/CapConstancias/Eliminados/db0cf048-eaec-495d-98d1-2d1f236b4621.pdf
+/SIGOFCv3/Archivos/CapConstancias/de89632c-1003-4aee-81b7-8773265d7f63.pdf
+/SIGOFCv3/Archivos/CapConstancias/d8455778-de3c-4af9-8d67-13cab80628ed.pdf
+/SIGOFCv3/Archivos/CapConstancias/b1b5a3a4-c5ff-4683-97af-6d0c16f9fccb.pdf
+/SIGOFCv3/Archivos/CapConstancias/2e945d0b-6809-41f3-8477-06ff3f35b429.pdf
+/SIGOFCv3/Archivos/CapConstancias/19e34868-3308-4fd3-a50b-909a04dd1dd4.pdf
+/SIGOFCv3/Archivos/Plantilla/20230702151611372.xlsx
