--- a/Capas/CapaEntidad/CapaEntidad.csproj
+++ b/Capas/CapaEntidad/CapaEntidad.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Documento\Ent_BITACORA_SUPER.cs" />
     <Compile Include="Documento\Ent_BUSQUEDA.cs" />
     <Compile Include="Documento\Ent_CAPACITACION.cs" />
+    <Compile Include="Documento\Ent_CAPACITACION_CONSTANCIA.cs" />
     <Compile Include="Documento\Ent_CNOTIFICACION.cs" />
     <Compile Include="Documento\Ent_Constancia.cs" />
     <Compile Include="Documento\Ent_ControlCalidad.cs" />
