corregir el listado de las constancias

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,5 @@ ModelManifest.xml
 /SIGOFCv3/Archivos/CapConstancias/2e945d0b-6809-41f3-8477-06ff3f35b429.pdf
 /SIGOFCv3/Archivos/CapConstancias/19e34868-3308-4fd3-a50b-909a04dd1dd4.pdf
 /SIGOFCv3/Archivos/Plantilla/20230702151611372.xlsx
+/SIGOFCv3/Archivos/CapConstancias/9decd2ee-7a45-4a92-ba83-76371f80c131.pdf
+/SIGOFCv3/Archivos/CapConstancias/f39240b1-8661-4d3c-a0e1-38e0931bc4eb.pdf
