correccion componente de seguridad

--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,11 @@ ModelManifest.xml
 /SIGOFCv3/Archivos/Plantilla/20230702151611372.xlsx
 /SIGOFCv3/Archivos/CapConstancias/9decd2ee-7a45-4a92-ba83-76371f80c131.pdf
 /SIGOFCv3/Archivos/CapConstancias/f39240b1-8661-4d3c-a0e1-38e0931bc4eb.pdf
+/SIGOFCv3/Archivos/CapConstancias/Eliminados/f39240b1-8661-4d3c-a0e1-38e0931bc4eb.pdf
+/SIGOFCv3/Archivos/CapConstancias/Eliminados/354e1d6e-75ef-405a-be89-b10608abe54e.pdf
+/SIGOFCv3/Archivos/CapConstancias/Eliminados/19e34868-3308-4fd3-a50b-909a04dd1dd4.pdf
+/SIGOFCv3/Archivos/CapConstancias/Zips/20230703_114957.zip
+/SIGOFCv3/Archivos/CapConstancias/f62d60df-530d-4984-b737-dcce96f20290.pdf
+/SIGOFCv3/Archivos/CapConstancias/ce5c2beb-0022-4e55-907a-0e262b781b36.pdf
+/SIGOFCv3/Archivos/CapConstancias/28a56d45-6c96-4261-854c-80dffaa974f0.pdf
+/SIGOFCv3/Archivos/CapConstancias/12d12270-ab23-4bc7-80d7-d40f0463a15a.pdf
