--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2319,6 +2319,8 @@
     <Content Include="Areas\Capacitacion\Views\ManPDC\IndexImport.cshtml" />
     <Content Include="Areas\Capacitacion\Views\ManPDC\_renderTImport.cshtml" />
     <Content Include="Areas\Capacitacion\Views\ManCapacitacion\_ParticitanteBuscar.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\ManPDC\_renderTalleres.cshtml" />
+    <Content Include="Areas\Capacitacion\Views\ManPDC\_renderTallerDetalle.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
